--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LinguoLink</title>
+    <meta
+      name="description"
+      content="使用LinguoLink網頁版找到語言交換夥伴 ✓ 快速認識其他語言學習者 ✓ 免費和母語者學習 ✓ 加入最多人的語言交換社群 ✓ 和LinguoLink 一起讓外語更流利！"
+    />
+    <title>LinguoLink語言交換網站 | 找到語言交換夥伴</title>
     <script
       src="https://kit.fontawesome.com/4ee724b524.js"
       crossorigin="anonymous"
