--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       name="description"
       content="使用LinguoLink網頁版找到語言交換夥伴 ✓ 快速認識其他語言學習者 ✓ 免費和母語者學習 ✓ 加入最多人的語言交換社群 ✓ 和LinguoLink 一起讓外語更流利！"
     />
-    <title>LinguoLink語言交換網站 | 找到語言交換夥伴</title>
+    <title>
+      LinguoLink語言交換網站&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;找到語言交換夥伴
+    </title>
+
     <script
       src="https://kit.fontawesome.com/4ee724b524.js"
       crossorigin="anonymous"
